# BMP2JPEG

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
Base/: Image.cpp  Image.h  ImageRenderer.cpp
Core/: Constants.h  Image.cpp  Image.h  ImageRenderer.cpp  ImageRenderer.h
ImageTypes/BMP/: BMP.cpp  BMP.h  ColorTable.cpp  ColorTable.h  DIBHeader.cpp  DIBHeader.h  FileHeader.h  PixelData.cpp  PixelData.h
ImageTypes/JPEG/: JPEG.cpp  JPEG.h
src/: main.cpp
src/BMP_Decoder/: BMP.cpp  BMP.h  ColorTable.cpp  ColorTable.h  DIBHeader.cpp  DIBHeader.h  ExtraBitMask.cpp  ExtraBitMask.h  FileHeader.cpp  FileHeader.h  PixelData.cpp  PixelData.h
src/Core/: ImageRenderer.cpp  ImageRenderer.h
src/JFIF_Encoder/: JFIF.cpp  JFIF.h  JPEG.cpp  JPEG.h
src/Util/: FreeFunctions.h  ImageRenderer.cpp  ImageRenderer.h  Mat8x8.cpp  Mat8x8.h  Pixel3.h  Pixel4.h  PixelRGBA.h
